@@ -10,6 +10,7 @@ Bug fixes for the 1.4 release.
 * Fix crash when removing a custom entity (#690).
 * Fix crash when a sprite file is missing or has no animation (#700).
 * Fix Lua error message saying "number expected" instead of "string expected".
+* Fix map scrolling not working if quest size is not a multiple of 5 (#701).
 * Fix entities already destroyed when map:on_finished() is called (#691).
 
 _______________________________
